--- a/frontend/assets/css/main.css
+++ b/frontend/assets/css/main.css
@@ -8,13 +8,26 @@
   --bg-col: #fff;
 }
 
+html, body {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
 p {
   font: var(--base-font);
 }
 
+h1 {
+  font: var(--base-font);
+  font-size: calc(1.2 * var(--un));
+  line-height: calc(1.2 * 1.2 * var(--un));
+  font-weight: 700;
+}
+
 h2 {
   font: var(--base-font);
-  font-size: calc(var(--un) / 1);
+  font-size: var(--un);
 }
 
 .base-font {
@@ -27,4 +40,12 @@ h2 {
 
 .no-margin {
   margin: 0;
+}
+
+.fill-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
