--- a/frontend/assets/css/main.css
+++ b/frontend/assets/css/main.css
@@ -27,7 +27,15 @@ h1 {
 
 h2 {
   font: var(--base-font);
-  font-size: var(--un);
+  font-size: calc(var(--un) / 1.2);
+  line-height: calc(1.2 * var(--un));
+  font-weight: 700;
+}
+
+h3 {
+  font: var(--base-font);
+  font-size: calc(var(--un) / 1.4);
+  font-weight: 700;
 }
 
 .base-font {
@@ -48,4 +56,11 @@ h2 {
   left: 0;
   width: 100%;
   height: 100%;
+}
+
+.pagedjs_pages {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 9999;
 }
