--- a/frontend/static/print/css/main.css
+++ b/frontend/static/print/css/main.css
@@ -26,6 +26,10 @@ ul {
   font-size: 4mm;
 }
 
+a {
+  color: #000;
+}
+
 img {
   width: 100%;
 }
@@ -85,6 +89,43 @@ blockquote {
 
 .article-first-page .pagedjs_margin-top-left {
   opacity: 0;
+}
+
+.article-last-page p:last-child {
+  position: relative;
+}
+
+.article-last-page p:last-child::after {
+  content: '';
+  position: absolute;
+  bottom: -7.5mm;
+  left: 0;
+  width: 5mm;
+  height: 1.25mm;
+  background-color: #000;
+}
+
+.article-last-page blockquote p:last-child::after {
+  background-color: none;
+  opacity: 0;
+}
+
+.source {
+  display: inline-block;
+  position: relative;
+  margin-top: 10mm;
+  font-family: 'DM Sans', sans-serif;
+  text-decoration: underline;
+}
+
+.source::before {
+  content: '';
+  position: absolute;
+  top: -7.5mm;
+  left: 0;
+  width: 5mm;
+  height: 1.25mm;
+  background-color: #000;
 }
 
 @page {
